--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,6 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Competitive Programmer's Handbook - Rust Edition"
+
+[preprocessor.katex]
+after = ["links"]
