add css and part of the new chapter

--- a/book.toml
+++ b/book.toml
@@ -5,4 +5,9 @@ multilingual = false
 src = "src"
 title = "Competitive Programmer's Handbook - Rust Edition"
 
+[output.html]
+additional-css = ["assets/css/custom.css"]
+
 [preprocessor.katex]
+[preprocessor.graphviz]
+command = "mdbook-graphviz"
