--- a/book.toml
+++ b/book.toml
@@ -10,5 +10,7 @@ additional-css = ["assets/css/custom.css"]
 mathjax-support = true
 
 [preprocessor.katex]
+after = ["links"]
+
 [preprocessor.graphviz]
 command = "mdbook-graphviz"
